tests/baselines/reference/additionOperatorWithNullValueAndInvalidOperator.errors.txt
==== tests/cases/compiler/additionOperatorWithNullValueAndInvalidOperator.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    var a: boolean;
    var b: Object;
    var c: void;
    var d: Number;
    
    // null + boolean/Object
    var r1 = null + a;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r2 = null + b;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r3 = null + c;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r4 = a + null;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r5 = b + null;
             ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r6 = null + c;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
    // other cases
    var r7 = null + d;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r8 = null + true;
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r9 = null + { a: '' };
             ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r10 = null + foo();
              ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var r11 = null + (() => { });
              ~~~~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.